Method to update display name
